fix: weird spacing

--- a/assets/scss/_util.scss
+++ b/assets/scss/_util.scss
@@ -74,7 +74,7 @@
   margin-right: 0;
 }
 .mb0 {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .ml0 {
   margin-left: 0;
